<resources>
    <string name="app_name">Court Counter</string>
    <string name="Luke">Luke</string>
    <string name="Darth">Darth</string>
    <string name="Score">Score</string>
    <string name="zero">0</string>
    <string name="Life">Life</string>
    <string name="number">100</string>
    <string name="button1">+10 to score\n-7 from life\nof Darth</string>
    <string name="button1_1">button1</string>
    <string name="button2">+15 to score\n-10 from life\nof Darth</string>
    <string name="button2_1">button2</string>
    <string name="button3">+5 to score\n+5 to life\nof Luke</string>
    <string name="button3_1">button3</string>
    <string name="button4">+10 to score \n-7 from life\nof Luke</string>
    <string name="button4_1">button4</string>
    <string name="button5">+15 to score \n-10 from life\nof Luke</string>
    <string name="button5_1">button5</string>
    <string name="button6">+5 to score \n+5 to life\nof Darth</string>
    <string name="button6_1">button6</string>
    <string name="reset_btn">reset button</string>
    <string name="winnerluke">Oh, no! You have defeated me!</string>
    <string name="winnerdarth">How dared you! Next time I will mess you up!</string>
    <string name="titleluke">GAME OVER - Luke\'s Victory</string>
    <string name="titledarth">GAME OVER - Darth\'s Victory</string>
    <string name="darth_received">&lt;p style=text-align:center>&lt;b>Darth received:&lt;/b>&lt;/p></string>
    <string name="luke_received">&lt;p style=text-align:center>&lt;b>Luke received:&lt;/b>&lt;/p></string>
    <string name="points_shield">&#160;points for using shield&lt;br></string>
    <string name="points_sword">&#160;points for using sword&lt;br></string>
    <string name="points_gun">&#160;points for using gun&lt;br></string>
    <string name="ok">OK</string>
</resources>
